@@ -84,11 +84,13 @@ there are any ambiguity or grammatical mistakes ;-)/
    |-----------------------------------------------+------------------------+----------------------------------------------------------------------------------------------------------|
    | anki-editor-api-host                          | "127.0.0.1"            | The network address AnkiConnect is listening.                                                            |
    | anki-editor-api-port                          | "8765"                 | The port number AnkiConnect is listening.                                                                |
-   | anki-editor-break-consecutive-braces-in-latex | nil                    | If non-nil, consecutive `}' will be automatically separated by spaces to prevent early-closing of cloze. |
+   | anki-editor-break-consecutive-braces-in-latex | nil                    | If non-nil, consecutive "}" will be automatically separated by spaces to prevent early-closing of cloze. |
    | anki-editor-ignored-org-tags                  | '("export" "noexport") | A list of Org tags that are ignored when constructing notes form entries.                                |
    | anki-editor-org-tags-as-anki-tags             | t                      | If nil, tags of entries wont't be counted as Anki tags.                                                  |
    | anki-editor-protected-tags                    | '("marked" "leech")    | A list of tags that won't be deleted from Anki even though they're absent in Org entries.                |
    | anki-editor-latex-style                       | builtin                | The style of latex to translate into.                                                                    |
+   | anki-editor-include-default-style             | t                      | Wheter or not to include `org-html-style-default' when using `anki-editor-copy-styles'.                  |
+   | anki-editor-html-head                         | nil                    | Additional html tags to append to card stylings when using `anki-editor-copy-styles'.                    |
 
 ** Functions and Macros
 
@@ -140,6 +142,14 @@ there are any ambiguity or grammatical mistakes ;-)/
 *** anki-editor-find-notes
 
     Find notes with QUERY.
+
+*** anki-editor-copy-styles
+
+    Copy `org-html-style-default' and `anki-editor-html-head' to Anki card stylings.
+
+*** anki-editor-remove-styles
+
+    Remove from card stylings html tags generated by this mode.
 
 * Limitations
 
