@@ -107,6 +107,17 @@ form entries."
   :type '(radio (const :tag "Built-in" builtin)
                 (const :tag "MathJax" mathjax)))
 
+(defcustom anki-editor-include-default-style t
+  "Wheter or not to include `org-html-style-default' when using `anki-editor-copy-styles'.
+For example, you might want to turn this off when you are going to
+provide your custom styles in `anki-editor-html-head'."
+  :type 'boolean)
+
+(defcustom anki-editor-html-head nil
+  "Additional html tags to append to card stylings when using `anki-editor-copy-styles'.
+For example, you can put custom styles or scripts in this variable."
+  :type 'string)
+
 
 ;;; AnkiConnect
 
@@ -936,6 +947,70 @@ entry."
     (if (called-interactively-p 'interactive)
         (message "%S" nids)
       nids)))
+
+(defvar anki-editor--style-start "</style>\n<!-- {{ Emacs Org-mode -->")
+(defvar anki-editor--style-end "<!-- Emacs Org-mode }} -->\n<style>")
+
+(defun anki-editor-copy-styles ()
+  "Copy `org-html-style-default' and `anki-editor-html-head' to Anki card stylings."
+  (interactive)
+  (let ((head (concat (org-element-normalize-string anki-editor--style-start)
+                      (org-element-normalize-string (format "<!-- Updated: %s -->" (current-time-string)))
+                      (when anki-editor-include-default-style
+                        (org-element-normalize-string org-html-style-default))
+                      (org-element-normalize-string anki-editor-html-head)
+                      anki-editor--style-end)))
+    (cl-loop for model in (anki-editor-note-types)
+             for style = (let* ((css (alist-get 'css (anki-editor-api-call-result 'modelStyling :modelName model)))
+                                (start (string-match
+                                        (regexp-quote anki-editor--style-start)
+                                        css))
+                                (end (string-match
+                                      (regexp-quote anki-editor--style-end)
+                                      css)))
+                           (if (and start end)
+                               (progn
+                                 (cl-incf end (length anki-editor--style-end))
+                                 ;; skip whitespaces
+                                 (when-let ((newend (string-match "[[:graph:]]" css end)))
+                                   (setq end newend))
+                                 (concat
+                                  (substring css 0 start)
+                                  (substring css end)))
+                             css))
+             do
+             (message "Updating styles for \"%s\"..." model)
+             (anki-editor-api-call-result 'updateModelStyling
+                                          :model (list :name model
+                                                       :css (concat (concat head "\n\n") style)))
+             finally do (message "Updating styles...Done"))))
+
+(defun anki-editor-remove-styles ()
+  "Remove from card stylings html tags generated by this mode."
+  (interactive)
+  (cl-loop for model in (anki-editor-note-types)
+           for css = (alist-get 'css (anki-editor-api-call-result 'modelStyling :modelName model))
+           for start = (string-match
+                        (regexp-quote anki-editor--style-start)
+                        css)
+           for end = (string-match
+                      (regexp-quote anki-editor--style-end)
+                      css)
+           if (and start end)
+           do
+           (cl-incf end (length anki-editor--style-end))
+           ;; also remove whitespaces
+           (when-let ((newend (string-match "[[:graph:]]" css end)))
+             (setq end newend))
+           (message "Resetting styles for \"%s\"..." model)
+           (anki-editor-api-call-result
+            'updateModelStyling
+            :model (list :name model
+                         :css (concat
+                               (substring css 0 start)
+                               (substring css end))))
+           finally do (message "Resetting styles...Done")))
+
 
 (provide 'anki-editor)
 
